remove `Plots.jl`

--- a/HierarchicalEOM.jl/cavityQED.qmd
+++ b/HierarchicalEOM.jl/cavityQED.qmd
@@ -10,8 +10,7 @@ engine: julia
 ## Package Imports
 ```{julia}
 using HierarchicalEOM
-using LaTeXStrings
-import Plots
+using CairoMakie
 ```
 
 ## Introduction
@@ -53,22 +52,26 @@ N = 3 ## system cavity Hilbert space cutoff
 ωA = 2
 ωc = 2
 g = 0.1
-## operators
+
+# operators
 a_c = destroy(N)
 I_c = qeye(N)
 σz_A = sigmaz()
 σm_A = sigmam()
 I_A = qeye(2)
-## operators in tensor-space
+
+# operators in tensor-space
 a = tensor(a_c, I_A)
 σz = tensor(I_c, σz_A)
 σm = tensor(I_c, σm_A)
-## Hamiltonian
+
+# Hamiltonian
 H_A = 0.5 * ωA * σz
 H_c = ωc * a' * a
 H_int = g * (a' * σm + a * σm')
 H_s = H_A + H_c + H_int
-## initial state
+
+# initial state
 ψ0 = tensor(basis(N, 0), basis(2, 0));
 ```
 
@@ -94,13 +97,19 @@ Before incorporating the correlation function into the HEOMLS matrix, it is esse
 tlist_test = 0:0.1:10;
 Bath_test = Boson_DrudeLorentz_Pade(a + a', Γ, W, kT, 1000);
 Ct = correlation_function(Bath, tlist_test);
-Ct2 = correlation_function(Bath_test, tlist_test);
-Plots.plot(tlist_test, real(Ct), label = "N=20 (real part )", linestyle = :dash, linewidth = 3)
-Plots.plot!(tlist_test, real(Ct2), label = "N=1000 (real part)", linestyle = :solid, linewidth = 3)
-Plots.plot!(tlist_test, imag(Ct), label = "N=20 (imag part)", linestyle = :dash, linewidth = 3)
-Plots.plot!(tlist_test, imag(Ct2), label = "N=1000 (imag part)", linestyle = :solid, linewidth = 3)
-Plots.xaxis!("t")
-Plots.yaxis!("C(t)")
+Ct2 = correlation_function(Bath_test, tlist_test)
+
+# plot
+fig = Figure(size = (500, 350))
+ax = Axis(fig[1, 1], xlabel = L"t", ylabel = L"C(t)")
+lines!(ax, tlist_test, real(Ct2), label = L"$N=1000$ (real part)", linestyle = :solid)
+lines!(ax, tlist_test, real(Ct),  label = L"$N=20$ (real part)", linestyle = :dash)
+lines!(ax, tlist_test, imag(Ct2), label = L"$N=1000$ (imag part)", linestyle = :solid)
+lines!(ax, tlist_test, imag(Ct),  label = L"$N=20$ (imag part)", linestyle = :dash)
+
+axislegend(ax, position = :rt)
+
+fig
 ```
 
 ## Construct HEOMLS matrix
@@ -149,22 +158,19 @@ np_steady_H = expect(a' * a, steady_H)
 plot results
 
 ```{julia}
-p1 = Plots.plot(
-    t_list,
-    [σz_evo_H, ones(length(t_list)) .* σz_steady_H],
-    label = [L"\langle \sigma_z \rangle" L"\langle \sigma_z \rangle ~~(\textrm{steady})"],
-    linewidth = 3,
-    linestyle = [:solid :dash],
-)
-p2 = Plots.plot(
-    t_list,
-    [np_evo_H, ones(length(t_list)) .* np_steady_H],
-    label = [L"\langle a^\dagger a \rangle" L"\langle a^\dagger a \rangle ~~(\textrm{steady})"],
-    linewidth = 3,
-    linestyle = [:solid :dash],
-)
-Plots.plot(p1, p2, layout = [1, 1])
-Plots.xaxis!("t")
+fig = Figure(size = (600, 350))
+
+ax1 = Axis(fig[1, 1], xlabel = L"t")
+lines!(ax1, t_list, σz_evo_H, label = L"\langle \sigma_z \rangle", linestyle = :solid)
+lines!(ax1, t_list, ones(length(t_list)) .* σz_steady_H, label = L"\langle \sigma_z \rangle ~~(\textrm{steady})", linestyle = :dash)
+axislegend(ax1, position = :rt)
+
+ax2 = Axis(fig[2, 1], xlabel = L"t")
+lines!(ax2, t_list, np_evo_H, label = L"\langle a^\dagger a \rangle", linestyle = :solid)
+lines!(ax2, t_list, ones(length(t_list)) .* np_steady_H, label = L"\langle a^\dagger a \rangle ~~(\textrm{steady})", linestyle = :dash)
+axislegend(ax2, position = :rt)
+
+fig
 ```
 
 ## Power spectrum
@@ -172,8 +178,13 @@ Plots.xaxis!("t")
 ```{julia}
 ω_list = 1:0.01:3
 psd_H = PowerSpectrum(M_Heom, steady_H, a, ω_list)
-Plots.plot(ω_list, psd_H, linewidth = 3)
-Plots.xaxis!(L"\omega")
+
+# plot
+fig = Figure(size = (500, 350))
+ax = Axis(fig[1, 1], xlabel = L"\omega")
+lines!(ax, ω_list, psd_H)
+
+fig
 ```
 
 ## Compare with Master Eq. approach
@@ -181,42 +192,54 @@ Plots.xaxis!(L"\omega")
 The Lindblad master equations which describes the cavity couples to an extra bosonic reservoir with [Drude-Lorentzian spectral density](https://qutip.org/HierarchicalEOM.jl/stable/bath_boson/Boson_Drude_Lorentz/#Boson-Drude-Lorentz) is given by
 
 ```{julia}
-## Drude_Lorentzian spectral density
+# Drude_Lorentzian spectral density
 Drude_Lorentz(ω, Γ, W) = 4 * Γ * W * ω / ((ω)^2 + (W)^2)
-## Bose-Einstein distribution
+
+# Bose-Einstein distribution
 n_b(ω, kT) = 1 / (exp(ω / kT) - 1)
-## build the jump operators
-jump_op =
-    [sqrt(Drude_Lorentz(ωc, Γ, W) * (n_b(ωc, kT) + 1)) * a, sqrt(Drude_Lorentz(ωc, Γ, W) * (n_b(ωc, kT))) * a', J_pump];
-## construct the HEOMLS matrix for master equation
+
+# build the jump operators
+jump_op = [
+    sqrt(Drude_Lorentz(ωc, Γ, W) * (n_b(ωc, kT) + 1)) * a,
+    sqrt(Drude_Lorentz(ωc, Γ, W) * (n_b(ωc, kT)))     * a',
+    J_pump
+];
+
+# construct the HEOMLS matrix for master equation
 M_master = M_S(H_s)
 M_master = addBosonDissipator(M_master, jump_op)
-## time evolution
+
+# time evolution
 sol_M = HEOMsolve(M_master, ψ0, t_list; e_ops = [σz, a' * a]);
-## steady state
+
+# steady state
 steady_M = steadystate(M_master);
-## expectation value of σz
+
+# expectation value of σz
 σz_evo_M = real(sol_M.expect[1, :])
 σz_steady_M = expect(σz, steady_M)
-## average photon number
+
+# average photon number
 np_evo_M = real(sol_M.expect[2, :])
-np_steady_M = expect(a' * a, steady_M)
-p1 = Plots.plot(
-    t_list,
-    [σz_evo_M, ones(length(t_list)) .* σz_steady_M],
-    label = [L"\langle \sigma_z \rangle" L"\langle \sigma_z \rangle ~~(\textrm{steady})"],
-    linewidth = 3,
-    linestyle = [:solid :dash],
-)
-p2 = Plots.plot(
-    t_list,
-    [np_evo_M, ones(length(t_list)) .* np_steady_M],
-    label = [L"\langle a^\dagger a \rangle" L"\langle a^\dagger a \rangle ~~(\textrm{steady})"],
-    linewidth = 3,
-    linestyle = [:solid :dash],
-)
-Plots.plot(p1, p2, layout = [1, 1])
-Plots.xaxis!("t")
+np_steady_M = expect(a' * a, steady_M);
+```
+
+plot results
+
+```{julia}
+fig = Figure(size = (600, 350))
+
+ax1 = Axis(fig[1, 1], xlabel = L"t")
+lines!(ax1, t_list, σz_evo_M, label = L"\langle \sigma_z \rangle", linestyle = :solid)
+lines!(ax1, t_list, ones(length(t_list)) .* σz_steady_M, label = L"\langle \sigma_z \rangle ~~(\textrm{steady})", linestyle = :dash)
+axislegend(ax1, position = :rt)
+
+ax2 = Axis(fig[2, 1], xlabel = L"t")
+lines!(ax2, t_list, np_evo_M, label = L"\langle a^\dagger a \rangle", linestyle = :solid)
+lines!(ax2, t_list, ones(length(t_list)) .* np_steady_M, label = L"\langle a^\dagger a \rangle ~~(\textrm{steady})", linestyle = :dash)
+axislegend(ax2, position = :rt)
+
+fig
 ```
 
 We can also calculate the power spectrum
@@ -224,8 +247,13 @@ We can also calculate the power spectrum
 ```{julia}
 ω_list = 1:0.01:3
 psd_M = PowerSpectrum(M_master, steady_M, a, ω_list)
-Plots.plot(ω_list, psd_M, linewidth = 3)
-Plots.xaxis!(L"\omega")
+
+# plot
+fig = Figure(size = (500, 350))
+ax = Axis(fig[1, 1], xlabel = L"\omega")
+lines!(ax, ω_list, psd_M)
+
+fig
 ```
 
 Due to the weak coupling between the system and an extra bosonic environment, the Master equation's outcome is expected to be similar to the results obtained from the HEOM method.
