--- a/QuantumToolbox.jl/lowrank.qmd
+++ b/QuantumToolbox.jl/lowrank.qmd
@@ -7,7 +7,7 @@ date-format: iso
 engine: julia
 ---
 
-In this tutorial, we will show how to solve the master equation using the low-rank method. For a detailed explanation of the method, we recommend to read the article (wait for reference.bib)
+In this tutorial, we will show how to solve the master equation using the low-rank method. For a detailed explanation of the method, we recommend to read the article: [Phys. Rev. Research 6, 023072 (2024)](https://doi.org/10.1103/PhysRevResearch.6.023072).
 
 As a test, we will consider the dissipative Ising model with a transverse field. The Hamiltonian is given by
 
