--- a/tutorial_template.qmd
+++ b/tutorial_template.qmd
@@ -9,11 +9,6 @@ engine: julia
 
 Inspirations taken from somewhere by someone. (or some preface)
 
-## Package Imports
-```{julia}
-using QuantumToolbox
-```
-
 ## Introduction
 
 The Hamiltonian $H$ is given by
@@ -21,6 +16,12 @@ The Hamiltonian $H$ is given by
 $$
 H = \hbar \omega \hat{a}^\dagger \hat{a}.
 $$
+
+We start by importing the packages:
+
+```{julia}
+using QuantumToolbox
+```
 
 Here we use units where $\hbar = 1$, and `ω = 1.0`:
 
