Fix date format and add title to each table listings (#12)

--- a/HierarchicalEOM.jl/cavityQED.qmd
+++ b/HierarchicalEOM.jl/cavityQED.qmd
@@ -1,8 +1,7 @@
 ---
 title: "Cavity QED system"
 author: Shen-Liang Yang, Yi-Te Huang
-date: last-modified
-date-format: iso
+date: 2025-01-13  # last update (keep this comment as a reminder)
 
 engine: julia
 ---
